--- a/src/main/resources/templates/myPage/content/ordered.html
+++ b/src/main/resources/templates/myPage/content/ordered.html
@@ -1,7 +1,6 @@
-
-
 <!-- 회원정보 섹션 -->
 <section th:fragment="ordered">
+    <link rel="stylesheet" th:href="@{/css/my/ordered.css}"/>
     <div th:replace="layout/modal :: #orderDetailModal"></div>
     <div th:replace="layout/modal :: #sellerInfoModal"></div>
     <div th:replace="layout/modal :: #inquiryModal"></div>
