--- a/src/main/resources/templates/myPage/content/coupon.html
+++ b/src/main/resources/templates/myPage/content/coupon.html
@@ -1,6 +1,7 @@
 <!-- 회원정보 섹션 -->
 <section th:fragment="coupon">
-    <a href="#"><img src="/images/image.PNG" alt="패션, 타운 하나로 끝" class="banner"></a>
+    <link rel="stylesheet" th:href="@{/css/my/coupon.css}"/>
+    <a href="#"><img src="/images/my/my_banner_sample.png" alt="롯데ON에서 드리는 다양한 결제혜택" class="banner"></a>
     <!-- 810x86 배너 이미지 -->
     <article class="latest">
 
