--- a/src/main/resources/templates/myPage/content/info.html
+++ b/src/main/resources/templates/myPage/content/info.html
@@ -1,5 +1,6 @@
 <section th:fragment="info">
-    <a href="#"><img src="/images/image.PNG" alt="패션, 타운 하나로 끝" class="banner"></a> <!-- 810x86 배너 이미지 -->
+    <link rel="stylesheet" th:href="@{/css/my/info.css}"/>
+    <a href="#"><img src="/images/my/my_banner_sample.png" alt="롯데ON에서 드리는 다양한 결제혜택" class="banner"></a>
 
     <article class="myinfomation">
         <h3>회원정보 설정</h3>
