Feat: Article 기능

--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -21,7 +21,7 @@
                     <img th:src="@{/images/main/main_notice.png}" alt="공지사항" style="width: 40px; height: 40px;">
                     NOTICE
                 </a>
-                <a th:href="@{/cs/layout/qna/list}">
+                <a th:href="@{/cs/layout/faq/list}">
                     <img th:src="@{/images/main/main_faq.png}" alt="자주묻는질문" style="width: 40px; height: 40px;">
                      FAQ
                 </a>
