--- a/src/main/resources/templates/company/content/media.html
+++ b/src/main/resources/templates/company/content/media.html
@@ -24,9 +24,9 @@
             <div class="contentSubHead">더 다양한 LotteON 영상을 소개합니다.</div>
 
             <div class="mediaVideo">
-                <iframe width="500" height="300" src="https://www.youtube.com/embed/AEHoUyrL6bI?si=mktpx1iN3j_YlfLw" 
-                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="500" height="300" src="https://www.youtube.com/embed/AEHoUyrL6bI?autoplay=1&mute=1"
+                        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
                 <div>
                     <p>#롯데레드페스티벌 개막🎉 100만 포인트가 쏟아진다!!</p>
                     <span> 2024 쇼핑 버라이어티, 역대 최대 혜택을 담은 <br>
@@ -35,9 +35,9 @@
             </div>
 
             <div class="mediaVideo">
-                <iframe width="500" height="300" src="https://www.youtube.com/embed/Q4_2Vkj32X4?si=V9x89jC4NHbxD6fL" 
-                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="500" height="300" src="https://www.youtube.com/embed/Q4_2Vkj32X4?autoplay=1&mute=1"
+                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
                 <div>
                     <p>#[롯데ON] 24년 첫 번째 롯데ON세상</p>
                     <span>#24년 첫 번째 롯데ON세상<br>
