--- a/src/main/resources/templates/company/index.html
+++ b/src/main/resources/templates/company/index.html
@@ -90,7 +90,7 @@
         </div>
 
         <div>
-            <a class="tabOn" th:href="@{/company/index}">HOME</a>
+            <a class="tabOn" th:href="@{company/index}">HOME</a>
             <a th:href="@{/company/content/culture}">기업문화</a>
             <a th:href="@{/company/content/story}">소식과 이야기</a>
             <a th:href="@{/company/content/recruit}">채용</a>
@@ -166,7 +166,7 @@
                         <p>2024.04</p>
                         <a th:href="@{/company/story}">오늘 주문하면, 내일 도착!! '내일온(ON)다' 론칭!</a>
                     </div>
-                    <span class="blogBtn">&#5125;</span>
+                    <a th:href=""><span class="blogBtn">&#5125;</span></a>
                 </div>
                 <div>
                     <div class="blogTitle">
