--- a/src/main/resources/templates/company/story/ESG.html
+++ b/src/main/resources/templates/company/story/ESG.html
@@ -35,12 +35,12 @@
                     <p>지속가능경영보고서</p>
                     <span >롯데쇼핑은 매년 경제ㆍ환경ㆍ사회ㆍ지배구조 부문에 대한 성과와 지속가능경영의 방향성을 담은 지속가능경영보고서를</span>
                 </a>
-                <a href="#">
+                <a href="https://story.lotteon.com/esg%ed%99%9c%eb%8f%99-%eb%a1%af%eb%8d%b0e%ec%bb%a4%eb%a8%b8%ec%8a%a4%ec%9d%98-%ea%b3%a0%ea%b0%9d-%ec%a4%91%ec%8b%ac-%ed%99%9c%eb%8f%99-%ec%a4%91%ec%9e%a5%ea%b8%b0-%eb%aa%a9%ed%91%9c/">
                     <img th:src="@{/images/company/esg2.jpg}" alt="사진">
                     <p>[ESG활동] 롯데e커머스의 고객 중심 서비스 개선 활동</p>
                     <span >고객 경험 개선과 Value Proposition을 위한 서비스 결함 발굴 및 개선</span>
                 </a>
-                <a href="#">
+                <a href="https://story.lotteon.com/esg%ed%99%9c%eb%8f%99-%eb%a1%af%eb%8d%b0e%ec%bb%a4%eb%a8%b8%ec%8a%a4-%ea%b0%9c%ec%9d%b8%ec%a0%95%eb%b3%b4%eb%b3%b4%ed%98%b8-%ed%99%9c%eb%8f%99/">
                     <img th:src="@{/images/company/esg3.jpg}" alt="사진">
                     <p>[ESG활동] 롯데e커머스 개인정보보호 활동</p>
                     <span>안심하고 지속적으로 이용할 수 있는 라이프스타일 플랫폼 구축</span>
