--- a/src/main/resources/templates/admin/include/admin_modal.html
+++ b/src/main/resources/templates/admin/include/admin_modal.html
@@ -158,7 +158,7 @@
     <div id="versioncheckModal" class="modal admin">
         <div class="VersionCheckmodal-content modalcontent">
             <nav class="adminmodal-nav">
-                <h1>배너등록</h1>
+                <h1>버전확인</h1>
                 <button class="adminmodal-close" id="closeModal">&times;</button>
             </nav>
             <section class="modal-section">
@@ -192,7 +192,7 @@
     <div id="versioninsertModal" class="modal admin">
         <div class="versioninsertmodal-content modalcontent">
             <nav class="adminmodal-nav">
-                <h1>배너등록</h1>
+                <h1>버전등록</h1>
                 <button class="adminmodal-close" id="closeModal">&times;</button>
             </nav>
             <section class="modal-section">
@@ -287,7 +287,7 @@
     <div id="userchangemodal" class="modal admin">
         <div class="userchangemodal-content modalcontent">
             <nav class="adminmodal-nav">
-                <h1>상점등록</h1>
+                <h1>회원수정</h1>
                 <button class="adminmodal-close" id="closeModal">&times;</button>
             </nav>
             <section class="modal-section">
