--- a/src/main/resources/templates/company/story/culture.html
+++ b/src/main/resources/templates/company/story/culture.html
@@ -10,7 +10,7 @@
             </div>
 
             <div>
-                <a th:href="@{/company/index}">HOME</a>
+                <a th:href="@{company/index}">HOME</a>
                 <a th:href="@{/company/content/culture}">기업문화</a>
                 <a class="tabOn" th:href="@{/company/content/story}">소식과 이야기</a>
                 <a th:href="@{/company/content/recruit}">채용</a>
@@ -41,12 +41,12 @@
                     <p>롯데e커머스 사람들 시리즈 19</p>
                     <span >8월 M.O.M 대상 최원준 님의 패션MD 이야기 함께 들어보아요😄</span>
                 </a>
-                <a href="#">
+                <a href="https://story.lotteon.com/new-start-day/">
                     <img th:src="@{/images/company/culture2.jpg}" alt="사진">
                     <p>NEW-START Day!</p>
                     <span >롯데ON이 새로운 공간에서 새롭게 출발합니다🙌🏻</span>
                 </a>
-                <a href="#">
+                <a href="https://story.lotteon.com/adieu-2023-next-page-2024/">
                     <img th:src="@{/images/company/culture3.jpg}" alt="사진">
                     <p>Adieu 2023, Next Page 2024</p>
                     <span >
@@ -54,17 +54,17 @@
                         Adieu 2023, Next Page 2024
                         롯데ON의 종무식과 취임식의 현장을 함께 살펴보아요!🎉</span>
                 </a>
-                <a href="#">
+                <a href="https://story.lotteon.com/2022%eb%85%84-%ed%95%98%eb%b0%98%ea%b8%b0-it-%ec%8b%a0%ea%b7%9c%ec%9e%85%ec%82%ac%ec%9e%90-1st-anniversary/">
                     <img th:src="@{/images/company/culture4.jpg}" alt="사진">
                     <p>2022년 하반기 IT 신규입사자 1st Anniversary!</p>
                     <span >2022년 하반기 IT 주니어 입사 1주년 기념 행사의 현장으로!</span>
                 </a>
-                <a href="#">
+                <a href="https://story.lotteon.com/%ec%97%ac%ea%b0%80%ec%b9%9c%ed%99%94%ec%9d%b8%ec%a6%9d/">
                     <img th:src="@{/images/company/culture5.jpg}" alt="사진">
                     <p>2023년 여가친화기업 선정</p>
                     <span >롯데e커머스가 2023년 여가친화기업으로 선정되었어요🏆</span>
                 </a>
-                <a href="#">
+                <a href="https://story.lotteon.com/elementor-7681/">
                     <img th:src="@{/images/company/culture6.jpg}" alt="사진">
                     <p>주니어 팀장 타운홀 미팅</p>
                     <span >열정 가득 주니어 팀장님들과 진행한 타운홀 미팅 함께 살펴보아요🙌🏻</span>
