config info complete

--- a/src/main/resources/templates/admin/config/info.html
+++ b/src/main/resources/templates/admin/config/info.html
@@ -28,7 +28,7 @@
                     <table class="form-table">
                         <tr>
                             <td><label>사이트 버전</label></td>
-                            <td>0.0.1-RELEASE</td>
+                            <td>[[${appInfo.appVersion}]]</td>
                         </tr>
                     </table>
                 </div>
