--- a/src/main/resources/templates/layout/footer.html
+++ b/src/main/resources/templates/layout/footer.html
@@ -9,7 +9,7 @@
         <li class="footer__link"><a th:href="@{/policy/finance}">전자금융거래약관</a></li>
     </ul>
     <div class="footer__info">
-        <p class="footer__logo"><img src="/static/images/footer_logo.png" th:src="@{/images/footer_logo.png}" alt="로고"></p>
+        <p class="footer__logo"><img src="/static/images/footer_logo.png" th:src="@{'/'+${appInfo.uploadDir}+'logo/'+${config.footerlogo}}" alt="로고"></p>
         <p class="footer__company-info">
             <strong>(주)LotteON</strong><br>
             부산시 강남구 테헤란로 152 (역삼동 강남파이낸스센터)<br>
