--- a/src/main/resources/templates/main/layout/main_layout.html
+++ b/src/main/resources/templates/main/layout/main_layout.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" th:href="@{/css/include/reset.css}"/>
     <link rel="stylesheet" th:href="@{/css/main/main.css}"/>
     <link rel="stylesheet" th:href="@{/css/include/layout.css}"/>
+    <link rel="stylesheet" th:href="@{/css/banner/banner.css}"/>
 </head>
 <body>
+<!-- main banner -->
+<div class="main_banner"></div>
 <!-- header -->
 <header th:replace="~{layout/header::header}"></header>
 <header th:replace="~{layout/header-nav}"></header>
